# explore-fermyon

./: .gitignore  readme.md
ai/: Cargo.toml  readme.md  runtime-config.toml  spin.toml
ai/src/: lib.rs
challenges/p_2022_01/: Cargo.toml  spin.toml  submit.hurl  test.hurl
challenges/p_2022_01/src/: lib.rs
challenges/p_2022_02/: Cargo.toml  spin.toml  submit.hurl  test.hurl
challenges/p_2022_02/src/: lib.rs
challenges/p_2022_03/: Cargo.toml  README.md  spin.toml  submit.hurl
challenges/p_2022_03/src/: lib.rs
challenges/p_2022_04/: Cargo.toml  README.md  spin.toml  test.hurl
challenges/p_2022_04/src/: lib.rs
challenges/p_2022_05/: Cargo.toml  README.md  spin.toml  submit.hurl  test.hurl
challenges/p_2022_05/src/: lib.rs
cloud_start/: Cargo.toml  README.md
cloud_start/src/: lib.rs
p_001_cloud_start/: Cargo.toml  README.md
todo/: Makefile  README.md  migration.sql  spin.toml
todo/todo_api/: Cargo.toml
todo/todo_api/src/: lib.rs
todo/todo_ui/: Cargo.toml  Trunk.toml  index.html
todo/todo_ui/src/components/: todo_service.rs
