[package]
name = "aos-hello-world"
description = "Advent of Spin 2022-01"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
spin-sdk = "3.0.1"
wit-bindgen-rust = "0.30.0"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.125"
[workspace]