[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
spin-sdk = "3.0.1"
wit-bindgen-rust = "0.30.0"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["v4"] }