[package]
name = "todo-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = {version = "1.0.209", features = ["derive"]}
serde_json = { version = "1.0.127" }